fix: top horizontal line on mobile

--- a/assets/scss/components/header.scss
+++ b/assets/scss/components/header.scss
@@ -22,3 +22,9 @@ header.brand hr {
     width: 75%;
     border-color: rgba(250, 250, 250, 0.25);
 }
+
+@media screen and (max-width: 760px) {
+    header.brand hr {
+        width: 100%;
+    }
+}
